--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -6,6 +6,7 @@
     <div class="course-wrapper">
       {{outlet freeVideo}}
       {{outlet levels}}
+      {{outlet activityTitle}}
       {{outlet bar}}
       {{outlet activity}}
     </div>
