rearranged outlets and re-ordered exercises

--- a/app/assets/javascripts/templates/activities/choose_word.hbs
+++ b/app/assets/javascripts/templates/activities/choose_word.hbs
@@ -11,7 +11,7 @@
           <div class="roundedOne">
 
               {{view Ember.Checkbox checked=this.selected type="checkbox" name=check id=this.id class="roundedOne"}}
-              <label  {{bindAttr for="this.id"}} ></label>
+              <label  {{bind-attr for="this.id"}} ></label>
             </div><div class="select-word"> {{this.word}}
           </div>
          </div>
