--- a/app/assets/javascripts/templates/activities/video.hbs
+++ b/app/assets/javascripts/templates/activities/video.hbs
@@ -16,7 +16,7 @@
         <h4 class="modal-title modal-title-oli" id="myModalLabel">Sorry!</h4>
       </div>
       <div class="modal-body">
-        <p>This content is missing.</p>
+        <p>This content hasn't been added yet.</p>
         <p> We'll fix it as soon as possible!</p>
               </div>
       <div class="modal-footer">
