--- a/app/assets/javascripts/templates/me.hbs
+++ b/app/assets/javascripts/templates/me.hbs
@@ -4,6 +4,6 @@
   {{partial 'me/accountBar'}}
   <div class="content-container-account">
     {{partial 'bar'}}
-    {{outlet 'template'}}
+    {{outlet}}
   </div>
 </div>
