--- a/app/assets/javascripts/templates/me/free_videos.hbs
+++ b/app/assets/javascripts/templates/me/free_videos.hbs
@@ -21,7 +21,7 @@
 
     </div>
 
-    {{#link-to 'free_videos_select' video.id}} {{video.title}} {{/link-to}}
+    {{#link-to 'free_video' video.id}} {{video.title}} {{/link-to}}
 
     <div class="description-free-videos">
       {{video.description}}
