--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -2,13 +2,6 @@
 <div class="outer-wrapper">
   {{outlet tip}}
   <div class="base-wrapper">
-    {{outlet me}}
-    <div class="course-wrapper">
-      {{outlet freeVideo}}
-      {{outlet levels}}
-      {{outlet activityTitle}}
-      {{outlet bar}}
-      {{outlet activity}}
-    </div>
+    {{outlet appContent}}
   </div>
 </div> 
