--- a/app/assets/stylesheets/course/activity.css.scss
+++ b/app/assets/stylesheets/course/activity.css.scss
@@ -52,6 +52,7 @@
 }
 
 .activity-contents{
+  position: relative;
   height: 470px;
   margin-top: -6px;
   overflow: hidden;
@@ -76,7 +77,7 @@
   position: absolute;
   width: 120px;
   height: 200px;
-  top: 175px;
+  top: 75px;
   right: 0px;
 }
 
