--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,4 +10,4 @@
   :button_text => "Submit"
 
 } %>
-  <%= render 'modal' %>
+  <%= render :partial=> 'modal' , :locals => {:id_val => "register-modal"}%>
