--- a/app/views/oli/_modal.html.erb
+++ b/app/views/oli/_modal.html.erb
@@ -6,11 +6,11 @@
         <h4 class="modal-title modal-title-oli" id="myModalLabel">Thanks for registering!</h4>
       </div>
       <div class="modal-body">
-        <p>Please check your email to confirm.</p>
-        <p> In the meantime, check out <a href="http://ahalya.tv">ahalya.tv</a>!</p>
+        <p>Welcome to the OLI course beta</p>
+        <p>Don't forget to confirm your email!</p>
               </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button id="<%= id_val ||= 'modal-button' %>" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
