--- a/app/views/oli/subscribe.js.erb
+++ b/app/views/oli/subscribe.js.erb
@@ -1,4 +1,4 @@
 var text = '<%= flash.now[:notice] %>'
 ga('send', 'event', 'registration', 'sign_up', 'oli', 1);
-$('#myModal').modal('show')  
+// $('#myModal').modal('show')  
 $(".status-oli").empty().append(text)
