added fallback for when sidekiq isn't running

--- a/app/assets/javascripts/templates/buttons.hbs
+++ b/app/assets/javascripts/templates/buttons.hbs
@@ -7,9 +7,9 @@
 </div>
 
 <div class="button-activity forward-button-activity">
-  <button class="smaller-button" data-style="zoom-out" {{action "buttonClicked" this on="click"}}>
-    <span class="ladda-label"></span>
-    {{controller.buttonText}}
+  <button class="ladda-button smaller-button" data-style="zoom-out" {{action "buttonClicked" this on="click"}}>
+    <span class="ladda-label">    {{controller.buttonText}}
+</span>
   </button>
 
 </div>
