fixed ackgrat bug

--- a/app/assets/javascripts/templates/grattack_prompt.hbs
+++ b/app/assets/javascripts/templates/grattack_prompt.hbs
@@ -2,7 +2,7 @@
   <div class="oli-container-small oli-text-small center">
         {{controller.type}} recorded.
       <div>
-      You can review all past {{controller.typePlural}} in the {{#link-to}} resources {{/link-to}} tab.
+      You can review all past {{controller.typePlural}} in the {{#link-to 'resources'}} resources {{/link-to}} tab.
     </div>
       <div class="oli-container-small">
         Would you like to record another {{controller.typeLower}}?
