set video controls to true

--- a/app/assets/javascripts/templates/activities/video.hbs
+++ b/app/assets/javascripts/templates/activities/video.hbs
@@ -2,7 +2,7 @@
   {{video-player width=controller.width 
   height=controller.height
   source=controller.source
-  controls=false}}
+  controls=true}}
   <div class="transcript">
     {{{controller.transcript.content.content}}}
   </div>
