removed video js

--- a/app/assets/javascripts/templates/activities/video.hbs
+++ b/app/assets/javascripts/templates/activities/video.hbs
@@ -1,4 +1,4 @@
-{{#view Oli.VideoView source=controller.source}}
+{{!-- {{#view Oli.VideoView source=controller.source}} --}}
   {{video-player width=controller.width 
   height=controller.height
   source=controller.source
@@ -6,7 +6,7 @@
   <div class="transcript">
     {{{controller.transcript.content.content}}}
   </div>
-{{/view}}
+{{!-- {{/view}} --}}
 
 <div class="modal fade" id="videoErrorModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-oli">
