possible improvement to video playback

--- a/app/assets/javascripts/templates/components/video-player.hbs
+++ b/app/assets/javascripts/templates/components/video-player.hbs
@@ -1,5 +1,5 @@
 <div class="video-container">
-  <video id="MY_VIDEO_1" 
+  <video id="my_video"
   {{bind-attr class=":video-js :vjs-default-skin :vjs-big-play-centered hideButton:hide-button"
 
   width=width
@@ -7,7 +7,7 @@
   controls=controls
   src=source.content
   }} 
-   data-setup="{}" >
+ >
     <source {{bind-attr src=source.content}} type="video/mp4">
    <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
   </video>
