--- a/app/assets/javascripts/templates/free_video.hbs
+++ b/app/assets/javascripts/templates/free_video.hbs
@@ -1,36 +1,36 @@
-<div class="course-wrapper">
+{{#view Oli.FreeVideoView}}
+  <div class="course-wrapper">
 
-<div id="fb-root"></div>
+  <div id="fb-root"></div>
 
-  {{partial 'activityTitle'}}
-  {{partial 'bar'}}
-  
-  {{#view Oli.VideoView source=controller.source autoplay=true preload=true}}
-  {{video-player width=controller.width 
-  height=controller.height
-  source=controller.source
-  controls=true}}
-  <div class="transcript">
-    {{{controller.transcript.content.content}}}
-  </div>
-{{/view}}
-{{controller.source.content}}
-<div class="modal fade" id="videoErrorModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-oli">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title modal-title-oli" id="myModalLabel">Sorry!</h4>
-      </div>
-      <div class="modal-body">
-        <p>This content hasn't been added yet.</p>
-        <p> We'll fix it as soon as possible!</p>
-              </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+    {{partial 'activityTitle'}}
+    {{partial 'bar'}}
+    
+    {{#view Oli.VideoView autoplay=true preload=true}}
+    {{video-player width=controller.width 
+    height=controller.height
+    source=controller.source
+    controls=true}}
+    <div class="transcript">
+      {{{controller.transcript.content.content}}}
+    </div>
+  {{/view}}
+  <div class="modal fade" id="videoErrorModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-oli">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title modal-title-oli" id="myModalLabel">Sorry!</h4>
+        </div>
+        <div class="modal-body">
+          <p>This content hasn't been added yet.</p>
+          <p> We'll fix it as soon as possible!</p>
+                </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
       </div>
     </div>
-  </div>
 </div>
 
   {{partial 'button'}}
@@ -38,3 +38,4 @@
     <div  class="fb-comments" data-href="http://getoli.com" data-numposts="5" data-colorscheme="light"></div>
   </div>
 </div>
+{{/view}}
