--- a/app/assets/javascripts/templates/free_video.hbs
+++ b/app/assets/javascripts/templates/free_video.hbs
@@ -34,8 +34,8 @@
 </div>
 
   {{partial 'button'}}
-  <div id="fb-comments" class="fb-free-video">
+  {{!-- <div id="fb-comments" class="fb-free-video">
     <div  class="fb-comments" data-href="http://getoli.com" data-numposts="5" data-colorscheme="light"></div>
-  </div>
+  </div> --}}
 </div>
 {{/view}}
