added button buffer, fixed typo

--- a/app/assets/stylesheets/acknowledgement.css.scss
+++ b/app/assets/stylesheets/acknowledgement.css.scss
@@ -20,6 +20,7 @@
 }
 
 .yes-no-button-container{
+  margin-top: 3px;
   display: inline-block;
   width: 75px;
 }
@@ -28,3 +29,4 @@
   overflow: hidden;
   height: 55px;
 }
+
