fixed progress bar

--- a/app/assets/javascripts/templates/levels.hbs
+++ b/app/assets/javascripts/templates/levels.hbs
@@ -1,3 +1,22 @@
+
+<div class="section-wrapper">
+
+  <div id="sections-row-oli" class="sections-row-oli row">
+    <div class="sections-row-ball"></div>
+
+
+      <div id="sections-progress" class="sections-progress"></div>
+      {{#each controller.sections}}
+        <div class="start-items">
+          <div class="sections-progress-inner"></div>
+          {{#link-to 'sections' this.name disabledWhen=controller.disableLink}}{{this.name}}{{/link-to}} 
+        </div>
+      {{/each}}
+  </div> <!-- /.row -->
+</div> <!-- /.section-wrapper -->
+
+
+{{!-- 
 <div class="section-wrapper">
 
   <div id="sections-row-oli" class="sections-row-oli row">
@@ -10,4 +29,4 @@
       </div>
       {{/each}}
   </div> <!-- /.row -->
-</div> <!-- /.section-wrapper -->
+</div> <!-- /.section-wrapper --> --}}
