--- a/app/assets/stylesheets/course/sections-bar.css.scss
+++ b/app/assets/stylesheets/course/sections-bar.css.scss
@@ -1,46 +1,8 @@
 @import "oli-root";
-.section-wrapper{
-  width: 375px;
+
+.inner-row-sections{
+  width: 100%;
   margin: 0 auto;
-  margin-right: 60px;
-  text-align: center
-}
-
-.start-items{
-  position: relative;
-  display: inline;
-  margin: auto;
-}
-
-.sections-progress{
-  position: absolute;
-  z-index: -1;
-  background: oli-yellow(1);
-  left: 0px;
-  height: $levels-height - 1;
-}
-
-.oli-yellow{
-  background: oli-yellow(1);
-}
-
-.oli-orange{
-  background: oli-orange(1);
-}
-
-.oli-red{
-  background: oli-red(1);
-}
-
-.sections-progress-inner{
-  display: inline;
-  position: absolute;
-  z-index: -1;
-
-  width: 0;
-  height: 100%;
-  left: 0;
-  // float: left;
 }
 
 .sections-row-ball{
@@ -57,6 +19,41 @@
   height: $levels-height;
 }
 
+.section-wrapper{
+  width: 375px;
+  height: $levels-height + 50px;
+
+  margin: 0 auto;
+  margin-right: 60px;
+  margin-top: 100px;
+  text-align: center
+}
+
+.start-items{
+  width: 30%;
+  position: relative;
+  display: inline-block;
+  margin: auto;
+}
+
+.sections-progress{
+  position: absolute;
+  z-index: -1;
+  background: oli-yellow(1);
+  left: 0px;
+  height: $levels-height - 1;
+}
+
+.sections-progress-inner{
+  position: absolute;
+  z-index: -1;
+
+  width: 0;
+  height: 100%;
+  left: 0;
+  // float: left;
+}
+
 .sections-row-oli{
   position: relative;
   width: 85%;
@@ -67,37 +64,78 @@
   border-left: none;
   margin: 15px;
   height: $levels-height;
-  line-height: 2.7*1.08em;
+  line-height: 2.7*1.15em;
 
   @include black-bold-text;
 }
 
-.start-items{
-  border-right:  1px solid rgba(0,0,0, .25);
-  padding: 13px 25px 13px 25px;
-  float:none !important;
-}
-
 .sections-row-oli div:last-of-type{
     border-right: none;
-    // padding: 0 0 5px 0;
-    padding: 13px 0px 13px 0px;
-    margin-left: 0px;
-    margin-right: -25px;
   }
 
-  .sections-row-oli div:last-of-type a{
-    padding-left: 35px;
-      margin-right: -45px;
+.start-items{
+  border-right:  1px solid rgba(0,0,0, .25);
+}
 
-    }
+.start-items .sections-progress-inner:first-of-type{
+  margin-left: -5px;
+}
 
-.sections-row-oli div:nth-of-type(3){
-    margin-left: -95px;
-  }
+// .sections-row-ball{
+//   // display: none;
+//   position: absolute;
+//   background: white image-url('small-flame-icon.png') no-repeat center; 
+//   background-size: 30*.8px 46*.8px;
+//   z-index: 100;
+//   border: 1px solid rgba(0,0,0, .25);
+//   border-radius: 1000px;
+//   margin-left: -24px;
+//   margin-top: -1px;
+//   width: $levels-height;
+//   height: $levels-height;
+// }
 
-.sections-row-oli div:nth-of-type(3) .sections-progress-inner{
-    margin-left: -14px;
-  }
+// .sections-row-oli{
+//   position: relative;
+//   width: 85%;
+//   border: 1px solid rgba(0,0,0, .25);
+//   border-top-right-radius: 100px;
+//   border-bottom-right-radius: 100px;
+
+//   border-left: none;
+//   margin: 15px;
+//   height: $levels-height;
+//   line-height: 2.7*1.08em;
+
+//   @include black-bold-text;
+// }
+
+// .start-items{
+//   border-right:  1px solid rgba(0,0,0, .25);
+//   padding: 13px 25px 13px 25px;
+//   float:none !important;
+// }
+
+// .sections-row-oli div:last-of-type{
+//     border-right: none;
+//     // padding: 0 0 5px 0;
+//     padding: 13px 0px 13px 0px;
+//     margin-left: 0px;
+//     margin-right: -25px;
+//   }
+
+//   .sections-row-oli div:last-of-type a{
+//     padding-left: 35px;
+//       margin-right: -45px;
+
+//     }
+
+// .sections-row-oli div:nth-of-type(3){
+//     margin-left: -95px;
+//   }
+
+// .sections-row-oli div:nth-of-type(3) .sections-progress-inner{
+//     margin-left: -14px;
+//   }
 
 
