--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,16 @@
   ga('send', 'pageview');
 
  
+ 
 </script>
-
+    <script type="text/javascript">
+        var _mfq = _mfq || [];
+        (function () {
+        var mf = document.createElement("script"); mf.type = "text/javascript"; mf.async = true;
+        mf.src = "//cdn.mouseflow.com/projects/775bb247-5e58-45c5-ad38-01549b642174.js";
+        document.getElementsByTagName("head")[0].appendChild(mf);
+      })();
+    </script>
 <meta property="fb:app_id"          content="1452435865004111
 " /> 
 <meta property="og:type"            content="fitness.course" /> 
