--- a/app/assets/stylesheets/course/navbar.css.scss
+++ b/app/assets/stylesheets/course/navbar.css.scss
@@ -14,7 +14,7 @@
 
 .nav-contents-container{
   text-align: left !important;
-  width: 740px;
+  width: 100%;
   margin: 0 auto;
   @include black-bold-text;
   a{
