--- a/app/assets/javascripts/templates/activities/share_1.hbs.erb
+++ b/app/assets/javascripts/templates/activities/share_1.hbs.erb
@@ -7,7 +7,7 @@
   <div class="oli-text">Let the world know about your progress.</div>
   {{textarea 
     class="share-1-box" 
-    value=controller.fb_message.content
+    value=fb_message
     placeholder="Enter your share message!"
   }}
 
