--- a/app/assets/javascripts/templates/components/modal-view.hbs
+++ b/app/assets/javascripts/templates/components/modal-view.hbs
@@ -2,7 +2,7 @@
   <div class="modal-dialog modal-dialog-oli">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true" {{action modalCallback on="click"}}>&times;</button>
         <h4 class="modal-title modal-title-oli" id="myModalLabel">{{title}}</h4>
       </div>
       <div class="modal-body">
@@ -21,6 +21,7 @@
                {{action modalCallback on="click"}}>Close
             </button>
           {{/if}}
+        </div>
       </div>
     </div>
   </div>
