--- a/app/assets/javascripts/templates/levels.hbs
+++ b/app/assets/javascripts/templates/levels.hbs
@@ -15,18 +15,8 @@
   </div> <!-- /.row -->
 </div> <!-- /.section-wrapper -->
 
-
-{{!-- 
-<div class="section-wrapper">
-
-  <div id="sections-row-oli" class="sections-row-oli row">
-    <div class="sections-row-ball"></div>
-    <div id="sections-progress" class="sections-progress"></div>
-    {{#each controller.sections}}
-      <div class="start-items col-sm-2">
-        <div class="sections-progress-inner"></div>
-        {{#link-to 'sections' this.name disabledWhen=controller.disableLink}}{{this.name}}{{/link-to}} 
-      </div>
-      {{/each}}
-  </div> <!-- /.row -->
-</div> <!-- /.section-wrapper --> --}}
+ {{modal-view 
+  idVal="sectionsModal"
+   title="You are being transitioned"
+    text="Please complete previous levels first!"
+   }}
