--- a/app/assets/javascripts/templates/me/free_videos.hbs
+++ b/app/assets/javascripts/templates/me/free_videos.hbs
@@ -29,7 +29,7 @@
   </div>
 {{/each}}
 
-  <button class="ladda-button  smaller-button" data-style="zoom-out" {{action "buttonClicked" this on="click"}}>
+  <button class="ladda-button oli-button" data-style="zoom-out" {{action "buttonClicked" this on="click"}}>
     <span class="ladda-label">Buy Course</span>  </button>
 
 
