--- a/app/assets/stylesheets/oli-base.css.scss
+++ b/app/assets/stylesheets/oli-base.css.scss
@@ -80,6 +80,10 @@ body {
   @include oli-text;
 }
 
+.oli-button{
+  @include oli-button;
+  float: right;
+}
 .oli-text-smaller{
   @include oli-text-smaller;
 }
