--- a/app/assets/javascripts/templates/activities/choose_word.hbs
+++ b/app/assets/javascripts/templates/activities/choose_word.hbs
@@ -1,11 +1,10 @@
 <div class="description-box oli-text">
-  {{this.description}}
+  {{activityController.description}}
 </div>
 <div clas="row">
   {{#view Oli.WordSelectionView}}
-    <div class="hidden">{{view.selected}}</div>
     <div class='select-word-container'>
-      {{#each view.component.words}}
+      {{#each controller.component.words}}
         <!-- Rounded ONE -->
         <div class='col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-5 description oli-text-smaller'>
           <div class="roundedOne">
