--- a/app/assets/javascripts/templates/me.hbs
+++ b/app/assets/javascripts/templates/me.hbs
@@ -5,24 +5,24 @@
   <div class="content-container-account">
     {{partial 'bar'}}
     {{outlet}}
-    {{modal-view
-      idVal="myModal" 
-      title="Congratulations"
-      text="<p>This is your first step toward finding your  OLI.</p>
-            <p>Enjoy the course and have lots of fun!</p>
-          "
-      modalCallback=purchaseTransition
-    }}
+
+    <div class="big-modal">
+      {{modal-view
+        idVal="myModal" 
+        title="Congratulations!"
+        text='<iframe src="//player.vimeo.com/video/104882734" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>'
+        modalCallback=purchaseTransition
+      }}
+    </div>
+    <div class="big-modal">
 
     {{modal-view
       idVal="firstTimeModal" 
       title="Welcome!"
-      text="<p>Here is your user profile. Enjoy the free videos!</p>
-            <p>Buy the course if you enjoy the content!</p>
-          "
-      modalCallback=purchaseTransition
+      text='<iframe id="video-iframe" src="//player.vimeo.com/video/104882734" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>'
+      modalCallback=closeModal
     }}
-
+  </div>
   </div>
 </div>
 
