--- a/app/assets/javascripts/templates/me.hbs
+++ b/app/assets/javascripts/templates/me.hbs
@@ -19,7 +19,7 @@
     {{modal-view
       idVal="firstTimeModal" 
       title="Welcome!"
-      text='<iframe id="video-iframe" src="//player.vimeo.com/video/104882734" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>'
+      text='<iframe class="iframe-me" id="video-iframe" src="//player.vimeo.com/video/104882734" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>'
       modalCallback=closeModal
     }}
   </div>
