--- a/app/assets/stylesheets/me.css.scss
+++ b/app/assets/stylesheets/me.css.scss
@@ -8,3 +8,16 @@
 .container-account{
   position: relative;
 }
+
+.iframe-me{
+  display: block;
+  padding: 20px;
+  width: 500px;
+  margin: auto;
+
+}
+
+.modal-dialog-welcome{
+  width: 540px;
+  text-align: center;
+}
